--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5",
     "axios": "^1.3.6",
     "infinite-react-carousel": "^1.2.11",
     "react": "^18.2.0",
